# emicobotero-rs

./: Cargo.toml
src/: main.rs
src/commands/: admin.rs  choose.rs  mod.rs  ping.rs
